recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:2: error: value unary_! is not a member of Int
  if (!steps==0) {
      ^